name:                       fei-datasets
version:                    0.1.0
synopsis:                   Pascal VOC dataset
description:                
homepage:                   http://github.com/pierric/fei-datasets
license:                    BSD3
license-file:               LICENSE
author:                     Jiasen Wu
maintainer:                 jiasenwu@hotmail.com
copyright:                  Copyright: (c) 2020 Jiasen Wu
category:                   Machine Learning, AI
build-type:                 Simple
cabal-version:              1.24

Library
    exposed-modules:        MXNet.NN.DataIter.PascalVOC
                            MXNet.NN.DataIter.Coco
                            MXNet.NN.DataIter.Anchor
                            MXNet.NN.DataIter.Common
    hs-source-dirs:         src
    ghc-options:            -Wall
    default-language:       Haskell2010
    default-extensions:     GADTs,
                            TypeFamilies,
                            OverloadedLabels,
                            FlexibleContexts,
                            FlexibleInstances,
                            StandaloneDeriving,
                            DeriveGeneric,
                            TypeOperators
    build-depends:          base >= 4.7 && < 5.0
                          , storable-tuple
                          , vector >= 0.12
                          , mtl >= 2.2
                          , lens >= 4.12
                          , transformers-base >= 0.4.4
                          , aeson >= 1.2
                          , containers >= 0.5
                          , bytestring >= 0.10
                          , exceptions >= 0.8.3
                          , time < 2.0
                          , repa >= 3.4
                          , aeson >= 1.0 && <1.5
                          , attoparsec (>=0.13.2.2 && <0.14)
                          , lens >= 4.12
                          , conduit >= 1.2 && < 1.4
                          , text
                          , hexpat
                          , store
                          , filepath
                          , directory
                          , random-fu
                          , conduit-concurrent-map
                          , unliftio-core
                          , resourcet
                          , hip
                          , deepseq
                          , fei-base
                          , fei-nn
                          , fei-cocoapi
Executable render
    hs-source-dirs:       utils
    main-is:              render.hs
    default-language:     Haskell2010
    build-depends:        base >= 4.7 && < 5.0,
                          fei-base,
                          fei-nn,
                          fei-datasets,
                          optparse-applicative,
                          attoparsec,
                          resourcet,
                          filepath,
                          lens,
                          vector,
                          text,
                          containers,
                          mtl,
                          conduit,
                          repa,
                          hip,
                          JuicyPixels,
                          FontyFruity,
                          Rasterific
    ghc-options:          -threaded

