name:                       fei-datasets
version:                    0.2.0
synopsis:                   Pascal VOC dataset
description:
homepage:                   http://github.com/pierric/fei-datasets
license:                    BSD3
license-file:               LICENSE
author:                     Jiasen Wu
maintainer:                 jiasenwu@hotmail.com
copyright:                  Copyright: (c) 2020 Jiasen Wu
category:                   Machine Learning, AI
build-type:                 Simple
cabal-version:              1.24

Library
    exposed-modules:        MXNet.NN.DataIter.PascalVOC
                            MXNet.NN.DataIter.Coco
                            MXNet.NN.DataIter.Anchor
                            MXNet.NN.DataIter.Common
    hs-source-dirs:         src
    ghc-options:            -Wall
    default-language:       Haskell2010
    default-extensions:     GADTs,
                            TypeFamilies,
                            OverloadedLabels,
                            FlexibleContexts,
                            FlexibleInstances,
                            StandaloneDeriving,
                            DeriveGeneric,
                            TypeOperators,
                            DataKinds,
                            PartialTypeSignatures
    build-depends:          base >= 4.7 && < 5.0
                          , storable-tuple
                          , lens >= 4.12
                          , transformers-base >= 0.4.4
                          , aeson >= 1.2
                          , repa >= 3.4
                          , aeson >= 1.0 && <1.5
                          , attoparsec (>=0.13.2.2 && <0.14)
                          , conduit >= 1.2 && < 1.4
                          , hexpat
                          , store
                          , random-fu
                          , conduit-concurrent-map
                          , resourcet
                          , hip
                          , rio
                          , vector
                          , fei-base
                          , fei-nn
                          , fei-cocoapi
Executable render
    hs-source-dirs:       utils
    main-is:              render.hs
    default-language:     Haskell2010
    build-depends:        base >= 4.7 && < 5.0,
                          fei-base,
                          fei-nn,
                          fei-datasets,
                          optparse-applicative,
                          attoparsec,
                          resourcet,
                          lens,
                          conduit,
                          repa,
                          hip,
                          vector,
                          rio,
                          JuicyPixels,
                          FontyFruity,
                          Rasterific
    ghc-options:          -threaded
Executable bench
    hs-source-dirs:       utils
    main-is:              bench.hs
    default-language:     Haskell2010
    build-depends:        base >= 4.7 && < 5.0,
                          fei-base,
                          fei-nn,
                          fei-datasets,
                          optparse-applicative,
                          criterion,
                          attoparsec,
                          resourcet,
                          lens,
                          conduit,
                          repa,
                          hip,
                          rio,
                          JuicyPixels,
                          JuicyPixels-repa,
                          JuicyPixels-extra
    ghc-options:          -threaded

